# cmdx

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmdx.xcodeproj/: project.pbxproj
cmdx.xcodeproj/xcuserdata/kejinlu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cmdx.xcodeproj/xcuserdata/kejinlu.xcuserdatad/xcschemes/: xcschememanagement.plist
docs/: MDX_File_Format.md
src/: cmdx_content_section.c  cmdx_content_section.h  cmdx_key_section.c  cmdx_key_section.h  cmdx_meta.c  cmdx_meta.h  cmdx_reader.c  cmdx_reader.h  cmdx_storage_block.c  cmdx_storage_block.h  cmdx_types.c  cmdx_types.h  cmdx_unit_info.c  cmdx_unit_info.h
src/crypto/: cmdx_crypto.c  cmdx_crypto.h  ripemd128.c  ripemd128.h  salsa20.c  salsa20.h
src/minilzo/: minilzo.h
src/utils/: cmdx_endian.c  cmdx_endian.h  cmdx_icu.c  cmdx_icu.h  cmdx_sort_key.c  cmdx_sort_key.h  cmdx_util.c  cmdx_util.h
tests/: CMakeLists.txt  test_dictionaries.c  test_fixture.c  test_lookup.c  test_main.c  test_meta.c  test_platform.h  test_reader.c
tests/data/: english-italian.mdx  test_chinese_key_devid_kejinlu@gmail.com_v3.0.key  test_chinese_key_devid_kejinlu@gmail.com_v3.0.mdx  test_chinese_key_v3.0.mdx  test_gbk_devid_kejinlu@gmail.com_v2.0.key  test_gbk_devid_kejinlu@gmail.com_v2.0.mdx  test_lzo.mdx  test_utf16_v2.0.mdx  test_utf8_v2.0.mdx
